--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "redux": "^3.7.2 || ^4.0.0",
+    "axios": "^0.18.0 || ^0.19.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
